--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,44 +12,58 @@ on:
 jobs:
   lint:
     name: Lint files
-    runs-on: 'ubuntu-latest'
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-go@v3
+      - name: Check out the repo
+        uses: actions/checkout@v3
+
+      - name: Setup Go
+        uses: actions/setup-go@v3
         with:
-          go-version: '1.19.1'
-      - uses: golangci/golangci-lint-action@v3
+          go-version: 1.19.1
+
+      - name: Run golangci-lint
+        uses: golangci/golangci-lint-action@v3
         with:
           version: latest
 
   test:
     name: Run tests
-    runs-on: 'ubuntu-latest'
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-go@v3
+      - name: Check out the repo
+        uses: actions/checkout@v3
+
+      - name: Setup Go
+        uses: actions/setup-go@v3
         with:
-          go-version: '1.19.1'
-      - run: make test
+          go-version: 1.19.1
+
+      - name: Run tests
+        run: make test
 
   build:
     name: Build binary
     needs: test
-    runs-on: 'ubuntu-latest'
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         goos:
-          - 'darwin'
-          - 'linux'
-          - 'windows'
+          - darwin
+          - linux
+          - windows
         goarch:
-          - 'amd64'
+          - amd64
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-go@v3
+      - name: Check out the repo
+        uses: actions/checkout@v3
+
+      - name: Setup Go
+        uses: actions/setup-go@v3
         with:
-          go-version: '1.19.1'
-      - name: Build
+          go-version: 1.19.1
+
+      - name: Build binary
         env:
           GOOS: ${{ matrix.goos }}
           GOARCH: ${{ matrix.goarch }}
